--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -1,5 +1,112 @@
 :root {
   /* Color */
+  --black: #000000;
+  --white: #ffffff;
+
+  --gray-50: #fafafa;
+  --gray-100: #f5f5f5;
+  --gray-200: #e5e5e5;
+  --gray-300: #d4d4d4;
+  --gray-400: #a3a3a3;
+  --gray-500: #737373;
+  --gray-600: #525252;
+  --gray-700: #404040;
+  --gray-800: #262626;
+  --gray-900: #171717;
+
+  --blue-50: #e6f1fd;
+  --blue-100: #b0d5f9;
+  --blue-200: #8ac0f6;
+  --blue-300: #54a3f2;
+  --blue-400: #3391f0;
+  --blue-500: #0076ec;
+  --blue-600: #006bd7;
+  --blue-700: #0054a8;
+  --blue-800: #004182;
+  --blue-900: #003263;
+
+  --sky-50: #dff4fe;
+  --sky-100: #afe3fc;
+  --sky-200: #78d1fb;
+  --sky-300: #38bef8;
+  --sky-400: #00b1f8;
+  --sky-500: #00a3f5;
+  --sky-600: #0095e6;
+  --sky-700: #0082d2;
+  --sky-800: #0071bd;
+  --sky-900: #00519b;
+
+  --green-50: #e7f8f2;
+  --green-100: #b5e9d8;
+  --green-200: #91dfc5;
+  --green-300: #5fd0ab;
+  --green-400: #40c79a;
+  --green-500: #10b981;
+  --green-600: #0fa875;
+  --green-700: #0b835c;
+  --green-800: #096647;
+  --green-900: #074e36;
+
+  --yellow-50: #fef5e7;
+  --yellow-100: #fce1b3;
+  --yellow-200: #fad28f;
+  --yellow-300: #f8be5c;
+  --yellow-400: #f7b13c;
+  --yellow-500: #f59e0b;
+  --yellow-600: #df900a;
+  --yellow-700: #ae7008;
+  --yellow-800: #875706;
+  --yellow-900: #674205;
+
+  --red-50: #fdecec;
+  --red-100: #fac5c5;
+  --red-200: #f8a9a9;
+  --red-300: #f48282;
+  --red-400: #f26969;
+  --red-500: #ef4444;
+  --red-600: #d93e3e;
+  --red-700: #aa3030;
+  --red-800: #832525;
+  --red-900: #641d1d;
+
+  /* 미나리로 변경되면서 primary 색상 그린으로 수정될 가능성 있음 */
+  --primary-50: var(--green-50);
+  --primary-100: var(--green-100);
+  --primary-200: var(--green-200);
+  --primary-300: var(--green-300);
+  --primary-400: var(--green-400);
+  --primary-500: var(--green-500);
+  --primary-600: var(--green-600);
+  --primary-700: var(--green-700);
+  --primary-800: var(--green-800);
+  --primary-900: var(--green-900);
+
+  --secondary-50: var(--gray-50);
+  --secondary-100: var(--gray-100);
+  --secondary-200: var(--gray-200);
+  --secondary-300: var(--gray-300);
+  --secondary-400: var(--gray-400);
+  --secondary-500: var(--gray-500);
+  --secondary-600: var(--gray-600);
+  --secondary-700: var(--gray-700);
+  --secondary-800: var(--gray-800);
+  --secondary-900: var(--gray-900);
+
+  /* --bg-primary:
+  --bg-secondary:
+  --bg-tertiary:
+  --bg-brand:
+  --bg-info-subtle:
+  --bg-info-bold:
+  --bg-warning-subtle:
+  --bg-warning-bold:
+  --bg-success-subtle:
+  --bg-success-bold:
+  --bg-danger-subtle:
+  --bg-danger-bold:
+  --bg-inverse-bold:
+  --bg-inverse-bolder:
+  --bg-disabled: */
 
   /* Typography */
 
