feat: 폰트 적용 / typography 클래스 추가
- Pretendard 전체 적용
- typography 공통 클래스 추가(common.css)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,9 +33,7 @@ textarea,
 select,
 button,
 table {
-  font-family:
-    -apple-system, BlinkMacSystemFont, helvetica, 'Apple SD Gothic Neo', '나눔고딕', NanumGothic,
-    '맑은 고딕', MalgunGothic, sans-serif;
+  font-family: 'Pretendard', sans-serif;
   font-size: 14px;
 }
 body {
