--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -113,6 +113,7 @@
   --line-height-450: 18px;
   --line-height-500: 20px;
   --line-height-550: 22px;
+  --line-height-600: 24px;
   --line-height-650: 26px;
   --line-height-700: 28px;
   --line-height-750: 30px;
