--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -3,6 +3,19 @@
   --black: #000000;
   --white: #ffffff;
 
+  /* Color - Primary */
+  --lime-50: #f9ffe6;
+  --lime-100: #effec0;
+  --lime-200: #e2fe93;
+  --lime-300: #d8ff64;
+  --lime-400: #cdfc35;
+  --lime-500: #c5f900;
+  --lime-600: #bce700;
+  --lime-700: #add000;
+  --lime-800: #a0b800;
+  --lime-900: #8a8f00;
+
+  /* Color - Secondary */
   --gray-50: #fafafa;
   --gray-100: #f5f5f5;
   --gray-200: #e5e5e5;
@@ -14,83 +27,223 @@
   --gray-800: #262626;
   --gray-900: #171717;
 
-  --blue-50: #e6f1fd;
-  --blue-100: #b0d5f9;
-  --blue-200: #8ac0f6;
-  --blue-300: #54a3f2;
-  --blue-400: #3391f0;
-  --blue-500: #0076ec;
-  --blue-600: #006bd7;
-  --blue-700: #0054a8;
-  --blue-800: #004182;
-  --blue-900: #003263;
+  /* Color - Frontend */
+  --sky-50: #e3fcff;
+  --sky-100: #baf8fe;
+  --sky-200: #8cf4ff;
+  --sky-300: #5fedfe;
+  --sky-400: #43e7fb;
+  --sky-500: #38e2fa;
+  --sky-600: #33d0e5;
+  --sky-700: #2eb9ca;
+  --sky-800: #2aa5b1;
+  --sky-900: #228083;
 
-  --sky-50: #dff4fe;
-  --sky-100: #afe3fc;
-  --sky-200: #78d1fb;
-  --sky-300: #38bef8;
-  --sky-400: #00b1f8;
-  --sky-500: #00a3f5;
-  --sky-600: #0095e6;
-  --sky-700: #0082d2;
-  --sky-800: #0071bd;
-  --sky-900: #00519b;
+  /* Color - Backend */
+  --pink-50: #fff0f3;
+  --pink-100: #ffd8dd;
+  --pink-200: #ffadad;
+  --pink-300: #fd8d8c;
+  --pink-400: #ff736c;
+  --pink-500: #ff6452;
+  --pink-600: #ff5f53;
+  --pink-700: #f4554c;
+  --pink-800: #e74e45;
+  --pink-900: #d84438;
 
-  --green-50: #e7f8f2;
-  --green-100: #b5e9d8;
-  --green-200: #91dfc5;
-  --green-300: #5fd0ab;
-  --green-400: #40c79a;
-  --green-500: #10b981;
-  --green-600: #0fa875;
-  --green-700: #0b835c;
-  --green-800: #096647;
-  --green-900: #074e36;
+  /* Color - Fullstack */
+  --purple-50: #f0e9ff;
+  --purple-100: #d7cafe;
+  --purple-200: #bca7ff;
+  --purple-300: #9e82fb;
+  --purple-400: #8667f3;
+  --purple-500: #6e4ceb;
+  --purple-600: #6247e4;
+  --purple-700: #6247e4;
+  --purple-800: #4139d2;
+  --purple-900: #232dc3;
 
-  --yellow-50: #fef5e7;
-  --yellow-100: #fce1b3;
-  --yellow-200: #fad28f;
-  --yellow-300: #f8be5c;
-  --yellow-400: #f7b13c;
-  --yellow-500: #f59e0b;
-  --yellow-600: #df900a;
-  --yellow-700: #ae7008;
-  --yellow-800: #875706;
-  --yellow-900: #674205;
+  /* Color - Yet */
+  --orange-50: #fff9e1;
+  --orange-100: #ffeeb3;
+  --orange-200: #ffe482;
+  --orange-300: #ffda4e;
+  --orange-400: #ffd026;
+  --orange-500: #ffc801;
+  --orange-600: #ffba00;
+  --orange-700: #ffa600;
+  --orange-800: #ff9500;
+  --orange-900: #ff7600;
 
-  --red-50: #fdecec;
-  --red-100: #fac5c5;
-  --red-200: #f8a9a9;
-  --red-300: #f48282;
-  --red-400: #f26969;
-  --red-500: #ef4444;
-  --red-600: #d93e3e;
-  --red-700: #aa3030;
-  --red-800: #832525;
-  --red-900: #641d1d;
+  /* info */
+  --blue-50: #e1f1ff;
+  --blue-100: #b6dbff;
+  --blue-200: #85c6ff;
+  --blue-300: #4dafff;
+  --blue-400: #029eff;
+  --blue-500: #008dfc;
+  --blue-600: #007fee;
+  --blue-700: #006dda;
+  --blue-800: #005cc7;
+  --blue-900: #003da6;
 
-  /* 미나리로 변경되면서 primary 색상 그린으로 수정될 가능성 있음 */
-  --primary-50: var(--green-50);
-  --primary-100: var(--green-100);
-  --primary-200: var(--green-200);
-  --primary-300: var(--green-300);
-  --primary-400: var(--green-400);
-  --primary-500: var(--green-500);
-  --primary-600: var(--green-600);
-  --primary-700: var(--green-700);
-  --primary-800: var(--green-800);
-  --primary-900: var(--green-900);
+  /* warning */
+  --yellow-50: #fef8e0;
+  --yellow-100: #fdedb1;
+  --yellow-200: #fbe17e;
+  --yellow-300: #fad748;
+  --yellow-400: #facc15;
+  --yellow-500: #fac300;
+  --yellow-600: #fbb500;
+  --yellow-700: #fca200;
+  --yellow-800: #fd9100;
+  --yellow-900: #fe7000;
 
-  --secondary-50: var(--gray-50);
-  --secondary-100: var(--gray-100);
-  --secondary-200: var(--gray-200);
-  --secondary-300: var(--gray-300);
-  --secondary-400: var(--gray-400);
-  --secondary-500: var(--gray-500);
-  --secondary-600: var(--gray-600);
-  --secondary-700: var(--gray-700);
-  --secondary-800: var(--gray-800);
-  --secondary-900: var(--gray-900);
+  /* success */
+  --green-50: #e4f7e8;
+  --green-100: #beeac7;
+  --green-200: #91dda2;
+  --green-300: #5cd07c;
+  --green-400: #22c55e;
+  --green-500: #00ba3e;
+  --green-600: #00aa35;
+  --green-700: #009828;
+  --green-800: #00871b;
+  --green-900: #007510;
+
+  /* danger */
+  --red-50: #ffeaf0;
+  --red-100: #fecad6;
+  --red-200: #f094a1;
+  --red-300: #e7697c;
+  --red-400: #f43f5d;
+  --red-500: #fc1b45;
+  --red-600: #ec0943;
+  --red-700: #d9003c;
+  --red-800: #cd0035;
+  --red-900: #be0029;
+
+  --transparent-12: #0000001f;
+  --transparent-16: #00000029;
+  --transparent-20: #00000033;
+  --transparent-24: #0000003d;
+  --transparent-32: #00000052;
+
+  /* Colors : Text */
+  --color-text-primary: var(--gray-900);
+  --color-text-secondary: var(--gray-700);
+  --color-text-tertiary: var(--gray-600);
+
+  --color-text-black: var(--black);
+  --color-text-white: var(--white);
+
+  --color-text-brand: var(--lime-600);
+  --color-text-frontend: var(--sky-700);
+  --color-text-backend: var(--pink-700);
+  --color-text-fullstack: var(--purple-700);
+  --color-text-yet: var(--orange-700);
+  --color-text-info-bold: var(--blue-700);
+  --color-text-info: var(--blue-500);
+  --color-text-success-bold: var(--green-800);
+  --color-text-success: var(--green-500);
+  --color-text-warning-bold: var(--yellow-700);
+  --color-text-warning: var(--yellow-500);
+  --color-text-danger-bold: var(--red-700);
+  --color-text-danger: var(--red-500);
+  --color-text-disabled: var(--gray-400);
+
+  --color-text-interactive-primary: var(--lime-300);
+  --color-text-interactive-primary-hovered: var(--lime-500);
+  --color-text-interactive-primary-pressed: var(--lime-600);
+  --color-text-interactive-secondary: var(--gray-600);
+  --color-text-interactive-secondary-hovered: var(--gray-700);
+  --color-text-interactive-secondary-pressed: var(--gray-800);
+  --color-text-interactive-selected: var(--lime-600);
+  --color-text-interactive-black: var(--black);
+  --color-text-interactive-white: var(--white);
+
+  --color-bg-primary: var(--white);
+  --color-bg-secondary: var(--gray-50);
+  --color-bg-tertiary: var(--gray-100);
+  --color-bg-brand-subtle: var(--lime-100);
+  --color-bg-brand-main: var(--lime-300);
+  --color-bg-brand-bold: var(--lime-500);
+  --color-bg-frontend: var(--sky-300);
+  --color-bg-backend: var(--pink-300);
+  --color-bg-fullstack: var(--purple-300);
+  --color-bg-yet: var(--orange-300);
+  --color-bg-info-subtle: var(--blue-50);
+  --color-bg-info-bold: var(--blue-300);
+  --color-bg-warning-subtle: var(--yellow-50);
+  --color-bg-warning-bold: var(--yellow-200);
+  --color-bg-success-subtle: var(--green-50);
+  --color-bg-success-bold: var(--green-400);
+  --color-bg-danger-subtle: var(--red-50);
+  --color-bg-danger-bold: var(--red-400);
+  --color-bg-bold: var(--gray-600);
+  --color-bg-bolder: var(--gray-800);
+  --color-bg-disabled: var(--gray-300);
+  --color-bg-interactive-primary: var(--lime-300);
+  --color-bg-interactive-primary-hovered: var(--lime-500);
+  --color-bg-interactive-primary-pressed: var(--lime-600);
+  --color-bg-interactive-secondary: var(--gray-50);
+  --color-bg-interactive-secondary-hovered: var(--gray-200);
+  --color-bg-interactive-secondary-pressed: var(--gray-300);
+
+  --color-icon-primary: var(--gray-900);
+  --color-icon-secondary: var(--gray-700);
+  --color-icon-tertiary: var(--gray-500);
+  --color-icon-brand: var(--lime-500);
+  --color-icon-frontend: var(--sky-700);
+  --color-icon-backend: var(--pink-700);
+  --color-icon-fullstack: var(--purple-700);
+  --color-icon-yet: var(--orange-700);
+  --color-icon-info: var(--blue-400);
+  --color-icon-warning: var(--yellow-400);
+  --color-icon-success: var(--green-400);
+  --color-icon-danger: var(--red-400);
+  --color-icon-disabled: var(--gray-400);
+  --color-icon-interactive-primary: var(--lime-300);
+  --color-icon-interactive-primary-hovered: var(--lime-500);
+  --color-icon-interactive-primary-pressed: var(--lime-700);
+  --color-icon-interactive-secondary: var(--gray-600);
+  --color-icon-interactive-secondary-hovered: var(--gray-700);
+  --color-icon-interactive-secondary-pressed: var(--gray-800);
+  --color-icon-interactive-selected: var(--lime-600);
+  --color-icon-interactive-black: var(--black);
+  --color-icon-interactive-white: var(--white);
+
+  --color-border-primary: var(--gray-400);
+  --color-border-secondary: var(--gray-200);
+  --color-border-brand-subtle: var(--lime-50);
+  --color-border-brand: var(--lime-400);
+  --color-border-frontend-subtle: var(--sky-50);
+  --color-border-frontend: var(--sky-400);
+  --color-border-backend-subtle: var(--pink-50);
+  --color-border-backend: var(--pink-400);
+  --color-border-fullstack-subtle: var(--purple-50);
+  --color-border-fullstack: var(--purple-400);
+  --color-border-yet-subtle: var(--orange-50);
+  --color-border-yet: var(--orange-500);
+  --color-border-info-subtle: var(--gray-50);
+  --color-border-info: var(--gray-500);
+  --color-border-warning-subtle: var(--yellow-50);
+  --color-border-warning: var(--yellow-400);
+  --color-border-success-subtle: var(--green-50);
+  --color-border-success: var(--green-500);
+  --color-border-danger-subtle: var(--red-50);
+  --color-border-danger: var(--red-500);
+  --color-border-disabled: var(--gray-400);
+
+  --color-border-interactive-primary: var(--lime-500);
+  --color-border-interactive-primary-hovered: var(--lime-600);
+  --color-border-interactive-primary-pressed: var(--lime-700);
+  --color-border-interactive-secondary: var(--gray-500);
+  --color-border-interactive-secondary-hovered: var(--gray-600);
+  --color-border-interactive-secondary-pressed: var(--gray-800);
+  --color-border-interactive-danger: var(--red-500);
+  --color-border-interactive-danger-hovered: var(--red-700);
+  --color-border-interactive-danger-pressed: var(--red-800);
 
   /* Typography */
   --font-size-275: 11px;
