--- a/src/app/common.css
+++ b/src/app/common.css
@@ -119,10 +119,10 @@
 .display-md {
   color: var(--color-text-secondary);
   font-size: var(--font-size-1100);
-  font-weight: var(--font-weight-semibold);
+  font-weight: var(--font-weight-medium);
   line-height: var(--line-height-1500);
   letter-spacing: -1px;
-  font-family: 'Paperlogy SemiBold', sans-serif;
+  font-family: 'Paperlogy Medium', sans-serif;
 }
 .display-sm {
   color: var(--color-text-secondary);
@@ -242,10 +242,20 @@
   }
 }
 
+/* text color */
+.txt-tertiary {
+  color: var(--color-text-tertiary) !important;
+}
+
 /* margin & padding */
 .pd-left-24 {
   padding-left: 24px;
 }
+
+.pd-top-40 {
+  padding-top: 40px;
+}
+
 .mg-left-4 {
   margin-left: 4px;
 }
@@ -268,4 +278,18 @@
 
 .mg-bottom-20 {
   margin-bottom: 20px;
+}
+
+.mg-top-4 {
+  margin-top: 4px;
+}
+.mg-top-16 {
+  margin-top: 16px;
+}
+.mg-top-32 {
+  margin-top: 32px;
+}
+
+.cp {
+  cursor: pointer;
 }
