--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,8 +42,8 @@ body {
 }
 html,
 body {
-  height: auto;
-  /*height: 100%;*/
+  height: 100dvh;
+  max-width: 100dvw;
 }
 img,
 fieldset {
@@ -118,4 +118,12 @@ select::-ms-expand {
   position: absolute;
   z-index: -1;
   opacity: 0;
+}
+
+@media screen and (max-width: 768px) {
+  html,
+  body {
+    min-width: 320px;
+    overflow-x: hidden;
+  }
 }
