--- a/src/app/(home)/_components/LandingPage.module.css
+++ b/src/app/(home)/_components/LandingPage.module.css
@@ -1,16 +1,165 @@
-.wrapper {
-}
-.hero-grid {
+.hero__grid {
   background-size: cover;
-  background-image: url('../../../assets/grid.png');
+  background-image: url('../../../assets/image/grid.png');
 }
 
-.hero-text {
-  padding: 102px 168px 110px 168px;
-  max-width: 944px;
+.hero__container__wrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.hero-text > div {
+.hero__container {
+  width: 100%;
+  max-width: 1140px !important;
+  display: flex;
+  justify-content: space-between;
+  margin: 110px 100px;
+}
+
+.hero__text {
+  width: 560px;
+}
+
+.hero__text > div {
   display: flex;
   align-items: center;
+}
+
+.hero__text-split__wrap {
+  height: 60px;
+  display: flex;
+  position: relative;
+}
+
+.hero__text-everyday {
+  height: 60px;
+  width: 370px;
+}
+
+.hero__text-everyday > div {
+  z-index: 1;
+  position: relative;
+}
+
+.hero__text-everyday__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hero__text-grows {
+  width: 160px;
+  height: 60px;
+}
+
+.hero__text-grows__img {
+  position: absolute;
+  bottom: 30px;
+}
+
+.desc__container {
+  padding: 80px 98px;
+}
+
+.desc__image__wrap {
+  margin-top: 60px;
+  display: flex;
+  gap: 24px;
+}
+
+.desc__image-black-container {
+  background-color: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 461px;
+  height: 320px;
+  border-radius: var(--border-radius-xl);
+}
+
+.desc__text-subtitle {
+  margin: 32px 0 4px 0;
+  color: var(--color-text-tertiary);
+}
+
+.desc__text-title {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+
+@media screen and (max-width: 950px) {
+  .hero__container {
+    flex-direction: column;
+    align-items: center;
+    max-width: 100dvw;
+    margin: 110px 20px !important;
+  }
+
+  .hero__image-person {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__grid {
+    max-width: 100dvw;
+    min-width: 320px;
+  }
+
+  .hero__container__wrap {
+    display: flex;
+    padding: 0 !important;
+    justify-content: center;
+  }
+
+  .hero__text {
+    width: auto;
+    /*max-width: 320px;*/
+  }
+
+  .hero__text-split__wrap {
+    display: block !important;
+    height: 96px;
+  }
+
+  .hero__text-everyday {
+    width: 300px;
+    height: 48px;
+  }
+
+  .hero__text-everyday div {
+    position: relative;
+  }
+
+  .hero__text-grows {
+    height: 48px;
+  }
+
+  .hero__text-grows__img {
+    position: absolute;
+    bottom: 0;
+  }
+
+  .hero__image-person {
+    display: none;
+  }
+
+  .desc__container {
+    margin: 0 20px;
+    padding: 80px 0 !important;
+  }
+
+  .desc__image__wrap {
+    flex-direction: column;
+    gap: 60px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .desc__image-black-container {
+    max-width: 461px;
+    width: calc(100dvw - 40px);
+  }
 }
