feat: [공통] LayoutWrapper 전체 적용
- 경로별 스타일 관리 추가
- 로그인 상태에 따른 스타일 관리 추가

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,14 @@
   position: sticky;
   top: 0;
   z-index: 99;
+}
+
+.light {
   background-color: var(--white);
+}
+
+.dark {
+  background-color: var(--color-bg-inverse-bolder);
 }
 
 .container {
@@ -35,6 +42,9 @@
   display: none;
 }
 
+.user-image {
+  border-radius: 50%;
+}
 @media screen and (max-width: 768px) {
   .wrapper {
     min-width: 320px;
