--- a/src/app/(home)/_components/LandingPage.module.css
+++ b/src/app/(home)/_components/LandingPage.module.css
@@ -68,6 +68,17 @@
   gap: 24px;
 }
 
+.desc-layout__wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.desc-layout__container {
+  margin: 0 74px;
+  width: 100%;
+  max-width: 1140px;
+}
+
 .desc__image-black-container {
   background-color: var(--black);
   display: flex;
@@ -144,6 +155,11 @@
 
   .hero__image-person {
     display: none;
+  }
+
+  .desc-layout__container {
+    margin: 0 20px;
+    min-width: 280px;
   }
 
   .desc__container {
