--- a/src/app/rehearsal/_components/Header/RehearsalHeader.module.css
+++ b/src/app/rehearsal/_components/Header/RehearsalHeader.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: flex;
-  width: 1280px;
+  max-width: 100%;
   padding: 16px 70px;
   justify-content: space-between;
   align-items: flex-end;
